--- a/src/test/resources/environment.properties
+++ b/src/test/resources/environment.properties
@@ -8,28 +8,11 @@ Activity=com.neoapp.MainActivity
 DeviceName=Testleaf
 UDID=ZF6224ZR3B
 
-#Pre URL
-Pre_URL=https://10.253.11.36:7032/
-
-#UserManagement
-UserManagement_URL=https://10.253.11.36:7009/userManagement/#/login
-User_Username=TECHADMIN
-User_Password=test@123
-
-
-
-#Teller Login
-Teller_URL=https://10.253.11.36:7009/teller/#/login
-Teller_UserName=NGTELLER
-Teller_Password=xAh3N$iI
-
-
-
 #Customer Login
-Customer_URL=https://10.253.11.36:7009/customer/#/select
-Customer_Code=004
-Customer_UserName=NEELIMATAB
-Customer_Password=test@123
+Customer_URL=
+
+UserName=NEELIMATAB
+Password=test@123
 
 # Headless
 Headless=false
