--- a/src/test/resources/fren.properties
+++ b/src/test/resources/fren.properties
@@ -1,13 +1,13 @@
 #Login Page
-login_username=login-username
-login_password=login-password
-login_submit=//input[@type='submit']
+loginUsername=login-username
+loginPassword=login-password
+loginSubmit=//input[@type='submit']
 
 
 # Menu Page [Main]
-home_menu=Lead
-home_account=Account
-home_contact=Contact
+homeMenu=Lead
+homeAccount=Account
+homeContact=Contact
 
 
 
